# real-estate-classifier

./: .gitignore  README.md  pyproject.toml  tareas.md
api/: main.py
app/: app.py
configs/: base_config.yaml
configs/experiments/: big_model.yaml  gtx1650.yaml  rtx3070.yaml
configs/sweeps/: big_sweep.yaml  sweep2.yaml  sweep3_rtx3070_backbones.yaml
docs/: report.md  report_outline.md
notebooks/: 01_data_prep_eda.ipynb  02_training_experiments.ipynb  03_model_selection_eval.ipynb  04_inference_api_test.ipynb  inference_walkthrough.ipynb  training_walkthrough.ipynb
src/: dataset.py  prepare_data.py  train.py
src/real_estate_ml/: __init__.py  config.py  constants.py
src/real_estate_ml/data/: __init__.py  dataset.py  prepare_splits.py
src/real_estate_ml/inference/: __init__.py  predictor.py
src/real_estate_ml/models/: __init__.py  classifier.py
src/real_estate_ml/training/: engine.py
src/utils/: upload_dataset.py
